--- a/croak.html
+++ b/croak.html
@@ -27,7 +27,7 @@
 <div class="toc">
 <ul>
 <li><a href="#croak">Croak!</a><ul>
-<li><a href="#auto-zine-maker">Auto Zine Maker</a></li>
+<li><a href="#autozinefier">AutoZinefier</a></li>
 <li><a href="#ranger-test">Ranger test</a></li>
 <li><a href="#halfling-pipeweed">Halfling Pipeweed</a></li>
 <li><a href="#slurm-priest">Slurm Priest</a></li>
@@ -39,7 +39,7 @@
 </div>
 </section>
 <section>
-<h2 id="auto-zine-maker">Auto Zine Maker</h2>
+<h2 id="autozinefier">AutoZinefier</h2>
 </section>
 <section>
 <h2 id="ranger-test">Ranger test</h2>
