--- a/output.html
+++ b/output.html
@@ -10,7 +10,7 @@
 <ul>
 <li><a href="#croak">Croak!</a><ul>
 <li><a href="#autozinefier">AutoZinefier</a></li>
-<li><a href="#ranger-test">Ranger test</a></li>
+<li><a href="#ranger">Ranger</a></li>
 <li><a href="#halfling-pipeweed">Halfling Pipeweed</a></li>
 <li><a href="#slurm-priest">Slurm Priest</a></li>
 <li><a href="#slime-goblins">Slime Goblins</a></li>
@@ -22,9 +22,29 @@
 </section>
 <section>
 <h2 id="autozinefier">AutoZinefier</h2>
+<p>This zine was typed in a <em>plain text editor</em> using <a href="https://daringfireball.net/projects/markdown/basics">markdown</a> and html. 
+You can see the some of the text I typed below.  This is what I typed to create the beginning of the following chapter.</p>
+<pre>
+&lt;section markdown="1"&gt;
+## Ranger
+You are gristled loner raised by bears, a storied hunter and tracker, a camoflouged predator shooting from the bush. 
+Rangers are warriors of the forest. What they lack in hit points, they make up for in pure skill.
+
+**Hit points:** A ranger gains 1d8 hit points at each level.
+
+**Weapon training:** A ranger is trained in the use of these weapons: club, dagger, long sword, spear, staff, and all ranged weapons. 
+</pre>
+<p>I then use a script on my computer to transform this into a webpage and PDF.
+The images are in a separate folder and, are linked in the text as well.</p>
+<p>You can see all of the text by looking at the croak.md file at this link: <a href="https://github.com/arielchuri/autozinefier/">https://github.com/arielchuri/autozinefier/</a>.
+The html and pdf files are in there as well.
+Here is the html as a webpage: <a href="https://arielchuri.github.io/autozinefier/croak.html">https://arielchuri.github.io/autozinefier/croak.html</a>.</p>
+<p>To do this at home, use the button that says, <em>code</em> to download a zip file of everything.
+You will need to install two command line programs. Python-markdown (<a href="https://python-markdown.github.io/">https://python-markdown.github.io/</a>) and Weasyprint (<a href="https://weasyprint.org/">https://weasyprint.org/</a>).</p>
+<p>You can then run the included script called <em>markdowntopdf.sh</em>. On my computer, I type <kbd>sh ./markdowntopdf.sh croak</kbd> in the terminal. If that works, you can copy <em>croak.md</em> to a new file like <em>myfilename.md</em> with no spaces. Change the text and images and then use the command <kbd>sh ./markdowntopdf.sh myfilename</kbd> to make your own zine. All of my work is released as <a href="https://creativecommons.org/publicdomain/zero/1.0/">Creative Commons 0</a> so you can do whatever you want with it.</p>
 </section>
 <section>
-<h2 id="ranger-test">Ranger test</h2>
+<h2 id="ranger">Ranger</h2>
 <p>You are gristled loner raised by bears, a storied hunter and tracker, a camoflouged predator shooting from the bush. Rangers are warriors of the forest. What they lack in hit points, they make up for in pure skill.</p>
 <p><strong>Hit points:</strong> A ranger gains 1d8 hit points at each level.</p>
 <p><strong>Weapon training:</strong> A ranger is trained in the use of these weapons: club, dagger, long sword, spear, staff, and all ranged weapons. Rangers may wear any armor.</p>
