--- a/output.html
+++ b/output.html
@@ -23,7 +23,7 @@
 <section>
 <h2 id="autozinefier">AutoZinefier</h2>
 <p>This zine was typed in a <em>plain text editor</em> using <a href="https://daringfireball.net/projects/markdown/basics">markdown</a> and html. 
-You can see the some of the text I typed below.  This is what I typed to create the beginning of the following chapter.</p>
+You can see some of the text I typed below.  This is what I typed to create the beginning of the following chapter.</p>
 <pre>
 &lt;section markdown="1"&gt;
 ## Ranger
@@ -41,7 +41,7 @@ The html and pdf files are in there as well.
 Here is the html as a webpage: <a href="https://arielchuri.github.io/autozinefier/croak.html">https://arielchuri.github.io/autozinefier/croak.html</a>.</p>
 <p>To do this at home, use the button that says, <em>code</em> to download a zip file of everything.
 You will need to install two command line programs. Python-markdown (<a href="https://python-markdown.github.io/">https://python-markdown.github.io/</a>) and Weasyprint (<a href="https://weasyprint.org/">https://weasyprint.org/</a>).</p>
-<p>You can then run the included script called <em>markdowntopdf.sh</em>. On my computer, I type <kbd>sh ./markdowntopdf.sh croak</kbd> in the terminal. If that works, you can copy <em>croak.md</em> to a new file like <em>myfilename.md</em> with no spaces. Change the text and images and then use the command <kbd>sh ./markdowntopdf.sh myfilename</kbd> to make your own zine. All of my work is released as <a href="https://creativecommons.org/publicdomain/zero/1.0/">Creative Commons 0</a> so you can do whatever you want with it.</p>
+<p>You can then run the included script called <em>markdowntopdf.sh</em>. On my computer, I type <kbd>sh ./markdowntopdf.sh croak</kbd> in the terminal. If that works, you can copy <em>croak.md</em> to a new file like <em>myfilename.md</em> with no spaces. Change the text and images and then use the command <kbd>sh ./markdowntopdf.sh myfilename</kbd> to make your own zine. All of is released as <a href="https://creativecommons.org/publicdomain/zero/1.0/">Creative Commons 0</a> so you can do whatever you want with it.</p>
 </section>
 <section>
 <h2 id="ranger">Ranger</h2>
@@ -53,9 +53,8 @@ You will need to install two command line programs. Python-markdown (<a href="ht
 <p><strong>Critical hits:</strong> The ranger enjoys the same expanded crit range as warriors but only on ranged attacks.</p>
 <p><strong>Aiming:</strong> Taking a round to aim a ranged attack adds +2 to the roll. A target that is unaware of any danger and struck by a hidden and aiming ranger, receives a critical hit as long as the attack is successful.</p>
 <p><strong>Initiative:</strong> A ranger adds his class level to his initiative rolls.</p>
-<p><strong>Luck:</strong> At first level, a warrior’s Luck modifier applies to attack rolls with one specific kind of weapon. This kind of weapon must be chosen at first level and the modifier is fixed at its starting value – neither the weapon nor the modifier changes over the course of the warrior’s career. The weapon type must be specific: longsword or short sword, not “swords.”</p>
-<p><strong>Ranger skills:</strong>
-Rangers roll a d24 on all hunting, nature, and survival checks. Rangers can track most quarryy without a roll at all.</p>
+<p><strong>Luck:</strong> Rangers are naturall lucky. A ranger regenerates luck at the rate of 1 point each day.</p>
+<p><strong>Ranger skills:</strong> Rangers roll a d24 on all hunting, nature, and survival checks. Rangers can track most quarryy without a roll at all.</p>
 <h3 id="ranger-table">Ranger Table</h3>
 <table>
 <thead>
@@ -179,7 +178,7 @@ Rangers roll a d24 on all hunting, nature, and survival checks. Rangers can trac
 </section>
 <section>
 <h2 id="halfling-pipeweed">Halfling Pipeweed</h2>
-<div class="colstwo">
+<div>
 <p>No self respecting halfling is without their pipe and some good pipweed.
 A halfling may forage for pipeweed by rolling on the following table.
 Typically just before their next adventure.</p>
@@ -187,7 +186,7 @@ Typically just before their next adventure.</p>
 <p>A halfling must use a portion of standard pipeweed to keep their pipe lit all day.
 With their pipe lit the halfling may use an action to add a little herbal supplement to the pipe. Effects do not stack.</p>
 </div>
-<h3 id="pipeweed-foraging-table">Pipeweed Foraging Table</h3>
+<h3 class="breakbefore" id="pipeweed-foraging-table">Pipeweed Foraging Table</h3>
 <p>Roll 3d14 +Luckmod +/-Location (Barren-3; Distant, Magical +3)</p>
 <div class="tablewrap">
 <table>
@@ -202,127 +201,127 @@ With their pipe lit the halfling may use an action to add a little herbal supple
 </thead>
 <tbody>
 <tr>
-<td>&lt;=22</td>
+<td>≤26</td>
 <td>Nothing found</td>
 <td></td>
 <td></td>
 <td></td>
 </tr>
 <tr>
-<td>23-25</td>
+<td>27-29</td>
 <td>Pipeweed</td>
 <td>2d6</td>
 <td>+1 Will</td>
 <td>All day</td>
 </tr>
 <tr>
-<td>26</td>
+<td>30</td>
 <td>Gassy Webcap</td>
 <td>2d6</td>
 <td>Heal self 1hp (1/turn)</td>
 <td>-</td>
 </tr>
 <tr>
-<td>27</td>
+<td>31</td>
 <td>Cape Sundew</td>
 <td>1d4</td>
 <td>+1 Initiative</td>
 <td>1 turn</td>
 </tr>
 <tr>
-<td>28</td>
+<td>32</td>
 <td>Sneezewort</td>
 <td>1d3</td>
 <td>+1 luck, non-permanent</td>
 <td>1 turn</td>
 </tr>
 <tr>
-<td>29</td>
+<td>33</td>
 <td>Lentil Shanklit</td>
 <td>1d3</td>
 <td>+1 sneak</td>
 <td>2 rounds</td>
 </tr>
 <tr>
-<td>30</td>
+<td>34</td>
 <td>Whiskery Milkcap</td>
 <td>1d3</td>
 <td>+ 2 Agility</td>
 <td>4 rounds</td>
 </tr>
 <tr>
-<td>31</td>
+<td>35</td>
 <td>Turquoise Elfcup</td>
 <td>1d3</td>
 <td>+1d Saving throws</td>
 <td>4 turns</td>
 </tr>
 <tr>
-<td>32</td>
+<td>36</td>
 <td>Idledew</td>
 <td>1d4</td>
 <td>+2 Stamina</td>
 <td>1 turn</td>
 </tr>
 <tr>
-<td>33</td>
+<td>37</td>
 <td>Witches’ Butter</td>
 <td>1d6</td>
 <td>Act +1</td>
 <td>1 turn</td>
 </tr>
 <tr>
-<td>34</td>
+<td>38</td>
 <td>Snaketongue Truffleclub</td>
 <td>1d4</td>
 <td>Detect falsehood</td>
 <td>1 turn</td>
 </tr>
 <tr>
-<td>35</td>
+<td>39</td>
 <td>Strangler Fig</td>
 <td>1</td>
 <td>Feather fall</td>
 <td>3 rounds</td>
 </tr>
 <tr>
-<td>36</td>
+<td>40</td>
 <td>Silver Torch Cactus</td>
 <td>1</td>
 <td>1d3 luck</td>
 <td>1 day</td>
 </tr>
 <tr>
-<td>37</td>
+<td>41</td>
 <td>Lithops</td>
 <td>1</td>
 <td>Act +1d, -2 Personality</td>
 <td>1 turn</td>
 </tr>
 <tr>
-<td>38</td>
+<td>42</td>
 <td>Hydnora</td>
 <td>1d3</td>
 <td>+3 Sneak</td>
 <td>1 turn</td>
 </tr>
 <tr>
-<td>39</td>
+<td>43</td>
 <td>Bladderwort</td>
 <td>1</td>
 <td>18 Intelligence Act -1d</td>
 <td>1 turn</td>
 </tr>
 <tr>
-<td>40</td>
+<td>44</td>
 <td>Dragon Arum</td>
 <td>1d3</td>
 <td>+1d All rolls</td>
 <td>1 turn</td>
 </tr>
 <tr>
-<td>41+</td>
-<td>Reroll 2x 1d10+30</td>
+<td>45+</td>
+<td>Reroll 2x 1d10+34</td>
 <td></td>
 <td></td>
 <td></td>
@@ -334,15 +333,13 @@ With their pipe lit the halfling may use an action to add a little herbal supple
 <section>
 <h2 id="slurm-priest">Slurm Priest</h2>
 <p><strong>Slurm Priest:</strong> Init +2; Atk bite +2 melee (1d6 + swallow), Vomit Puss Goblin +3 ranged 40’ (1d3, 5’ area effect); AC 12; HD 2d8; hp 10; MV 20&rsquo;; Act 1d20 + 1d14; SP disgust, swallow, vomit, defecate; SV Fort +5, Ref +0, Will +0; AL C.</p>
-<div class="colstwo">
-<p>This upright, purple worm loves jewelry, profanity, and is always found with the Slime Goblins it has excreted. 
+<p class="breakafter">This upright, purple worm loves jewelry, profanity, and is always found with the Slime Goblins it has excreted. 
 A supplicant of its chaos lord, the Slurm Priest is often called to test the forces of Law. </p>
 <p><strong>Disgust:</strong> Any human in a 5’ range must make a fort save each turn or lose a turn. Demihumans are immune. </p>
 <p><strong>Swallow:</strong> If bite successful; DC 15 Strength check or be half swallowed. The character will be upside down with arms pinned at waist and legs kicking. On the Slurm’s next turn the character drops any large weapon and is completely swallowed (unless aided in some way). Swallowed characters lose 1d3 Stamina per round and take half damage from piercing and bludgeoning attacks on the Slurm.  Swallowed characters who have access to a blade must make DC 15 Strength check to attack. </p>
 <p>Characters who lose Stamina in the Slurm’s stomach have a chance of mutation (10% per point of Stamina, minor corruption table modified by luck).
 The Slurm gains -1 attack and -5’ movement per person swallowed. </p>
 <p>Anyone reduced to 6 or less Stamina becomes a Slurm Symbiote and is ejected from the rear (100% chance of mutation). The worms grow in the body. Over the next week, barring intervention, the victim falls very ill, begins to bloat, attempts to attack lawful clerics, and explodes releasing thousands of purple worms. </p>
-</div>
 <h3 id="vomit">Vomit</h3>
 <p>Can shoot a Puss Goblin. Shooting it up to 40’. +3 ranged, 1d4 Dam. The Puss Goblin explodes on a hit or lands ready to attack next turn on a miss. </p>
 <h3 id="defecate">Defecate</h3>
