fixed cover resize on mobile

--- a/output.html
+++ b/output.html
@@ -12,6 +12,7 @@
 <li><a href="#autozinefier">AutoZinefier</a></li>
 <li><a href="#ranger">Ranger</a></li>
 <li><a href="#halfling-pipeweed">Halfling Pipeweed</a></li>
+<li><a href="#manifest-of-the-mundane">Manifest of the Mundane</a></li>
 <li><a href="#slurm-priest">Slurm Priest</a></li>
 <li><a href="#slime-goblins">Slime Goblins</a></li>
 <li><a href="#mechanaut">Mechanaut</a></li>
@@ -28,7 +29,7 @@ You can see some of the text I typed below.  This is what I typed to create the 
 &lt;section markdown="1"&gt;
 ## Ranger
 You are gristled loner raised by bears, a storied hunter and tracker, a camoflouged predator shooting from the bush. 
-Rangers are warriors of the forest. What they lack in hit points, they make up for in pure skill.
+Rangers are warriors of the forest. What they lack in hit points, they make up for in luck and skill.
 
 **Hit points:** A ranger gains 1d8 hit points at each level.
 
@@ -41,17 +42,17 @@ The html and pdf files are in there as well.
 Here is the html as a webpage: <a href="https://arielchuri.github.io/autozinefier/croak.html">https://arielchuri.github.io/autozinefier/croak.html</a>.</p>
 <p>To do this at home, use the button that says, <em>code</em> to download a zip file of everything.
 You will need to install two command line programs. Python-markdown (<a href="https://python-markdown.github.io/">https://python-markdown.github.io/</a>) and Weasyprint (<a href="https://weasyprint.org/">https://weasyprint.org/</a>).</p>
-<p>You can then run the included script called <em>markdowntopdf.sh</em>. On my computer, I type <kbd>sh ./markdowntopdf.sh croak</kbd> in the terminal. If that works, you can copy <em>croak.md</em> to a new file like <em>myfilename.md</em> with no spaces. Change the text and images and then use the command <kbd>sh ./markdowntopdf.sh myfilename</kbd> to make your own zine. All of is released as <a href="https://creativecommons.org/publicdomain/zero/1.0/">Creative Commons 0</a> so you can do whatever you want with it.</p>
+<p>You can then run the included script called <em>markdowntopdf.sh</em>. On my computer, I type <kbd>sh ./markdowntopdf.sh croak</kbd> in the terminal. If that works, you can copy <em>croak.md</em> to a new file like <em>myfilename.md</em> with no spaces. Change the text and images and then use the command <kbd>sh ./markdowntopdf.sh myfilename</kbd> to make your own zine. All of my work here is released as <a href="https://creativecommons.org/publicdomain/zero/1.0/">Creative Commons 0</a> so you can do whatever you want with it.</p>
 </section>
 <section>
 <h2 id="ranger">Ranger</h2>
-<p>You are gristled loner raised by bears, a storied hunter and tracker, a camoflouged predator shooting from the bush. Rangers are warriors of the forest. What they lack in hit points, they make up for in pure skill.</p>
+<p>You are gristled loner raised by bears, a storied hunter and tracker, a camoflouged predator shooting from the bush. Rangers are warriors of the forest. What they lack in hit points, they make up for in luck and skill.</p>
 <p><strong>Hit points:</strong> A ranger gains 1d8 hit points at each level.</p>
 <p><strong>Weapon training:</strong> A ranger is trained in the use of these weapons: club, dagger, long sword, spear, staff, and all ranged weapons. Rangers may wear any armor.</p>
 <p><strong>Attack modifier:</strong> The ranger has a deed die and <em>Mighty Deeds of Arms</em>, just as the warrior.</p>
 <p><strong>Ranged attacks bonus:</strong> The ranger gains a +1d bonus to ranged attack rolls, and ranged attack damage.</p>
 <p><strong>Critical hits:</strong> The ranger enjoys the same expanded crit range as warriors but only on ranged attacks.</p>
-<p><strong>Aiming:</strong> Taking a round to aim a ranged attack adds +2 to the roll. A target that is unaware of any danger and struck by a hidden and aiming ranger, receives a critical hit as long as the attack is successful.</p>
+<p><strong>Aiming:</strong> Taking a round to aim a ranged attack adds +2 to the roll. A target that is unaware of any danger and struck by an aiming ranger, receives a critical hit as long as the attack is successful.</p>
 <p><strong>Initiative:</strong> A ranger adds his class level to his initiative rolls.</p>
 <p><strong>Luck:</strong> Rangers are naturall lucky. A ranger regenerates luck at the rate of 1 point each day.</p>
 <p><strong>Ranger skills:</strong> Rangers roll a d24 on all hunting, nature, and survival checks. Rangers can track most quarryy without a roll at all.</p>
@@ -187,7 +188,7 @@ Typically just before their next adventure.</p>
 With their pipe lit the halfling may use an action to add a little herbal supplement to the pipe. Effects do not stack.</p>
 </div>
 <h3 class="breakbefore" id="pipeweed-foraging-table">Pipeweed Foraging Table</h3>
-<p>Roll 3d14 +Luckmod +/-Location (Barren-3; Distant, Magical +3)</p>
+<p>A half day spent foraging allows may uncover some valuable pipeweed. Roll 3d16 +/-Luckmod.</p>
 <div class="tablewrap">
 <table>
 <thead>
@@ -331,6 +332,41 @@ With their pipe lit the halfling may use an action to add a little herbal supple
 </div>
 </section>
 <section>
+<h2 id="manifest-of-the-mundane">Manifest of the Mundane</h2>
+<h3 id="the-rain">The Rain</h3>
+<ol>
+<li>Never reaches the surface or extinguishes torches</li>
+<li>Completely deafens anyone it touches for as long as they remain wet</li>
+<li>Feels oily, but will not ignite</li>
+<li>Glows phosphorescencely orange for 1d5 rounds</li>
+<li>Causes spiders to develop from droplets and quickly skitter away</li>
+<li>Feels preternaturally <strong>1.</strong> cold <strong>2.</strong> hot</li>
+<li>Emanates from the face of a maiden in the clouds</li>
+<li>Causes crime in its wake</li>
+<li>Withers plants and foliage to a deep black, but has no effect on creatures</li>
+<li>Smells coppery, but has no taste</li>
+<li>Creates warts that fall off in 1d7 days</li>
+<li>Contains a coarse brown fur</li>
+<li>Has a name</li>
+<li>Taste like a fine vintage port (still appears as a clear liquid without smell)</li>
+<li>Cannot be captured in a bowl or canteen </li>
+</ol>
+<h3 id="a-book">A Book</h3>
+<ol>
+<li>Has an author with the exact same name as the reader</li>
+<li>Smells like a rotten corpse</li>
+<li>Causes the reader to experience a headache</li>
+<li>Smokes for 1d5 minutes</li>
+<li>Will become misplaced if not carefully watched</li>
+<li>Contains the seal of an ancient scion of law</li>
+<li>Opens to reveal a strange feather clearly used to mark the page</li>
+<li>Details the location of a <strong>1.</strong> unmapped oasis <strong>2.</strong> hidden kingdom <strong>3.</strong> pit with no bottom <strong>4.</strong> a mysterious stone</li>
+<li>Has a heartbeat.  If opened, the book will die.</li>
+<li>Contains the most beautiful illustrations you’ve ever seen. You do not want to part with this tome.</li>
+<li>Is written in ink that is only visible in complete darkness</li>
+</ol>
+</section>
+<section>
 <h2 id="slurm-priest">Slurm Priest</h2>
 <p><strong>Slurm Priest:</strong> Init +2; Atk bite +2 melee (1d6 + swallow), Vomit Puss Goblin +3 ranged 40’ (1d3, 5’ area effect); AC 12; HD 2d8; hp 10; MV 20&rsquo;; Act 1d20 + 1d14; SP disgust, swallow, vomit, defecate; SV Fort +5, Ref +0, Will +0; AL C.</p>
 <p class="breakafter">This upright, purple worm loves jewelry, profanity, and is always found with the Slime Goblins it has excreted. 
@@ -350,10 +386,9 @@ The Slurm gains -1 attack and -5’ movement per person swallowed. </p>
 </section>
 <section>
 <h2 id="slime-goblins">Slime Goblins</h2>
-<p>These are regular goblins that have been mutated in the extradimensional stomach of the Slurm Worm (see below). </p>
-<h3 id="puss">Puss</h3>
+<p>These are goblins that have been mutated in the extradimensional stomach of the Slurm (see above). </p>
 <p><strong>Puss Goblin:</strong> Init -1; Atk shiv -1 melee (1d4-1), burst area effect 5’ (1d3 and DC 10 Fort save or lose a turn), AC 9; HD 1d6-1; hp 2; MV roll 35&rsquo;; Act 1d20; SP burst, infravision; SV Fort +1, Ref -1, Will +3; AL C</p>
-<p>Explodes with yellow spray upon taking any damage. 1d3 to all within 5’. Usually sets off a chain reaction. Attacks in numbers. </p>
+<p>Massively bloated into transluscent, yellow balls. These frightened looking goblins roll into battle in numbers. They explodes with yellow spray upon taking any damage and . 1d3 to all within 5’. Usually sets off a chain reaction. Attacks in numbers. </p>
 <h3 id="napalm">Napalm</h3>
 <p>Att Shortsword +1 melee, Spit napalm +1 ranged 1d4HP and catch fire. If killed by piercing or slashing attack; reflex save to avoid napalm spray. </p>
 <h3 id="acid">Acid</h3>
