--- a/croak.html
+++ b/croak.html
@@ -39,7 +39,7 @@
 </ul>
 </div>
 </section>
-<section>
+<section class="background">
 <h2 id="autozinefier">AutoZinefier</h2>
 <p>This zine was typed in a <em>plain text editor</em> using <a href="https://daringfireball.net/projects/markdown/basics">markdown</a> and html. 
 You can see some of the text I typed below.  This is what I typed to create the beginning of the following chapter.</p>
@@ -53,7 +53,8 @@ Rangers are warriors of the forest. What they lack in hit points, they make up f
 
 **Weapon training:** A ranger is trained in the use of these weapons: club, dagger, long sword, spear, staff, and all ranged weapons. 
 </pre>
-<p>I then use a script on my computer to transform this into a webpage and PDF.
+<p><img alt="" src="images/coversuper.svg" />
+I then use a script on my computer to transform this into a webpage and PDF.
 The images are in a separate folder and, are linked in the text as well.</p>
 <p>You can see all of the text by looking at the croak.md file at this link: <a href="https://github.com/arielchuri/autozinefier/">https://github.com/arielchuri/autozinefier/</a>.
 The html and pdf files are in there as well.
@@ -62,7 +63,7 @@ Here is the html as a webpage: <a href="https://arielchuri.github.io/autozinefie
 You will need to install two command line programs. Python-markdown (<a href="https://python-markdown.github.io/">https://python-markdown.github.io/</a>) and Weasyprint (<a href="https://weasyprint.org/">https://weasyprint.org/</a>).</p>
 <p>You can then run the included script called <em>markdowntopdf.sh</em>. On my computer, I type <kbd>sh ./markdowntopdf.sh croak</kbd> in the terminal. If that works, you can copy <em>croak.md</em> to a new file like <em>myfilename.md</em> with no spaces. Change the text and images and then use the command <kbd>sh ./markdowntopdf.sh myfilename</kbd> to make your own zine. All of my work here is released as <a href="https://creativecommons.org/publicdomain/zero/1.0/">Creative Commons 0</a> so you can do whatever you want with it.</p>
 </section>
-<section>
+<section class="outro">
 <h2 id="ranger">Ranger</h2>
 <p>You are gristled loner raised by bears, a storied hunter and tracker, a camoflouged predator shooting from the bush. Rangers are warriors of the forest. What they lack in hit points, they make up for in luck and skill.</p>
 <p><strong>Hit points:</strong> A ranger gains 1d8 hit points at each level.</p>
@@ -73,7 +74,7 @@ You will need to install two command line programs. Python-markdown (<a href="ht
 <p><strong>Aiming:</strong> Taking a round to aim a ranged attack adds +2 to the roll. A target that is unaware of any danger and struck by an aiming ranger, receives a critical hit as long as the attack is successful.</p>
 <p><strong>Initiative:</strong> A ranger adds his class level to his initiative rolls.</p>
 <p><strong>Luck:</strong> Rangers are naturall lucky. A ranger regenerates luck at the rate of 1 point each day.</p>
-<p><strong>Ranger skills:</strong> Rangers roll a d24 on all hunting, nature, and survival checks. Rangers can track most quarryy without a roll at all.</p>
+<p><strong>Ranger skills:</strong> Rangers roll a d24 on all hunting, nature, and survival checks. Rangers can track most quarry without a roll at all.</p>
 <h3 id="ranger-table">Ranger Table</h3>
 <table>
 <thead>
@@ -191,20 +192,18 @@ You will need to install two command line programs. Python-markdown (<a href="ht
 </tr>
 </tbody>
 </table>
-<ul>
-<li>Ranged attacks only.</li>
-</ul>
+<p>Ranged attacks only.</p>
+<p class="outro"><img alt="" src="images/outro.svg" /></p>
 </section>
-<section>
+<section class="outro">
 <h2 id="halfling-pipeweed">Halfling Pipeweed</h2>
-<div>
 <p>No self respecting halfling is without their pipe and some good pipweed.
 A halfling may forage for pipeweed by rolling on the following table.
 Typically just before their next adventure.</p>
 <p>Standard pipeweed may be bought in shops in areas where halflings reside for 10sp each. It should also be noted that it would be terribly rude for a halfling to refuse another halfling a pinch of pipeweed and normal for the favor to be asked. </p>
 <p>A halfling must use a portion of standard pipeweed to keep their pipe lit all day.
 With their pipe lit the halfling may use an action to add a little herbal supplement to the pipe. Effects do not stack.</p>
-</div>
+<p class="outro"><img alt="" src="images/outro.svg" /></p>
 <h3 class="breakbefore" id="pipeweed-foraging-table">Pipeweed Foraging Table</h3>
 <p>A half day spent foraging allows may uncover some valuable pipeweed. Roll 3d16 +/-Luckmod.</p>
 <div class="tablewrap">
