--- a/croak.html
+++ b/croak.html
@@ -17,9 +17,9 @@
     <body>
 
 <h1 id="croak">Croak!</h1>
-<section class="background">
-<p><img alt="" src="images/cover.svg" />
-<img alt="" src="images/coversuper.svg" /></p>
+<section class="clean">
+<p><img alt="" class="background" src="images/cover.svg" />
+<img alt="" class="background" src="images/coversuper.svg" /></p>
 </section>
 <section class="clean blank">
 </section>
@@ -39,8 +39,9 @@
 </ul>
 </div>
 </section>
-<section class="background">
+<section class="">
 <h2 id="autozinefier">AutoZinefier</h2>
+<p><img alt="" class="background" src="images/coversuper.svg" /></p>
 <p>This zine was typed in a <em>plain text editor</em> using <a href="https://daringfireball.net/projects/markdown/basics">markdown</a> and html. 
 You can see some of the text I typed below.  This is what I typed to create the beginning of the following chapter.</p>
 <pre>
@@ -53,8 +54,7 @@ Rangers are warriors of the forest. What they lack in hit points, they make up f
 
 **Weapon training:** A ranger is trained in the use of these weapons: club, dagger, long sword, spear, staff, and all ranged weapons. 
 </pre>
-<p><img alt="" src="images/coversuper.svg" />
-I then use a script on my computer to transform this into a webpage and PDF.
+<p>I then use a script on my computer to transform this into a webpage and PDF.
 The images are in a separate folder and, are linked in the text as well.</p>
 <p>You can see all of the text by looking at the croak.md file at this link: <a href="https://github.com/arielchuri/autozinefier/">https://github.com/arielchuri/autozinefier/</a>.
 The html and pdf files are in there as well.
@@ -63,8 +63,9 @@ Here is the html as a webpage: <a href="https://arielchuri.github.io/autozinefie
 You will need to install two command line programs. Python-markdown (<a href="https://python-markdown.github.io/">https://python-markdown.github.io/</a>) and Weasyprint (<a href="https://weasyprint.org/">https://weasyprint.org/</a>).</p>
 <p>You can then run the included script called <em>markdowntopdf.sh</em>. On my computer, I type <kbd>sh ./markdowntopdf.sh croak</kbd> in the terminal. If that works, you can copy <em>croak.md</em> to a new file like <em>myfilename.md</em> with no spaces. Change the text and images and then use the command <kbd>sh ./markdowntopdf.sh myfilename</kbd> to make your own zine. All of my work here is released as <a href="https://creativecommons.org/publicdomain/zero/1.0/">Creative Commons 0</a> so you can do whatever you want with it.</p>
 </section>
-<section class="outro">
+<section class="">
 <h2 id="ranger">Ranger</h2>
+<p><img alt="" class="background" src="images/cover.svg" /></p>
 <p>You are gristled loner raised by bears, a storied hunter and tracker, a camoflouged predator shooting from the bush. Rangers are warriors of the forest. What they lack in hit points, they make up for in luck and skill.</p>
 <p><strong>Hit points:</strong> A ranger gains 1d8 hit points at each level.</p>
 <p><strong>Weapon training:</strong> A ranger is trained in the use of these weapons: club, dagger, long sword, spear, staff, and all ranged weapons. Rangers may wear any armor.</p>
@@ -193,9 +194,9 @@ You will need to install two command line programs. Python-markdown (<a href="ht
 </tbody>
 </table>
 <p>Ranged attacks only.</p>
-<p class="outro"><img alt="" src="images/outro.svg" /></p>
+<p><img alt="" class="background" src="images/coversuper.svg" /></p>
 </section>
-<section class="outro">
+<section class="">
 <h2 id="halfling-pipeweed">Halfling Pipeweed</h2>
 <p>No self respecting halfling is without their pipe and some good pipweed.
 A halfling may forage for pipeweed by rolling on the following table.
@@ -203,7 +204,7 @@ Typically just before their next adventure.</p>
 <p>Standard pipeweed may be bought in shops in areas where halflings reside for 10sp each. It should also be noted that it would be terribly rude for a halfling to refuse another halfling a pinch of pipeweed and normal for the favor to be asked. </p>
 <p>A halfling must use a portion of standard pipeweed to keep their pipe lit all day.
 With their pipe lit the halfling may use an action to add a little herbal supplement to the pipe. Effects do not stack.</p>
-<p class="outro"><img alt="" src="images/outro.svg" /></p>
+<p><img alt="" src="images/outro.svg" /></p>
 <h3 class="breakbefore" id="pipeweed-foraging-table">Pipeweed Foraging Table</h3>
 <p>A half day spent foraging allows may uncover some valuable pipeweed. Roll 3d16 +/-Luckmod.</p>
 <div class="tablewrap">
@@ -421,8 +422,8 @@ The Slurm gains -1 attack and -5’ movement per person swallowed. </p>
 </div>
 </div>
 </section>
-<section class="background">
-<p><img alt="" src="images/coversuper.svg" /></p>
+<section class="">
+<p><img alt="" class="background" src="images/coversuper.svg" /></p>
 </section>
 <p></body>
 </html></p>
