--- a/croak.html
+++ b/croak.html
@@ -18,8 +18,8 @@
 
 <h1 id="croak">Croak!</h1>
 <section class="clean">
-<p><img alt="" class="background" src="images/cover.svg" />
-<img alt="" class="background" src="images/coversuper.svg" /></p>
+<p class="background"><img alt="" src="images/cover.svg" /></p>
+<p class="background"><img alt="" src="images/coversuper.svg" /></p>
 </section>
 <section class="clean blank">
 </section>
@@ -40,8 +40,8 @@
 </div>
 </section>
 <section class="">
+<p class="background"><img alt="" src="images/coversuper.svg" /></p>
 <h2 id="autozinefier">AutoZinefier</h2>
-<p><img alt="" class="background" src="images/coversuper.svg" /></p>
 <p>This zine was typed in a <em>plain text editor</em> using <a href="https://daringfireball.net/projects/markdown/basics">markdown</a> and html. 
 You can see some of the text I typed below.  This is what I typed to create the beginning of the following chapter.</p>
 <pre>
@@ -64,8 +64,8 @@ You will need to install two command line programs. Python-markdown (<a href="ht
 <p>You can then run the included script called <em>markdowntopdf.sh</em>. On my computer, I type <kbd>sh ./markdowntopdf.sh croak</kbd> in the terminal. If that works, you can copy <em>croak.md</em> to a new file like <em>myfilename.md</em> with no spaces. Change the text and images and then use the command <kbd>sh ./markdowntopdf.sh myfilename</kbd> to make your own zine. All of my work here is released as <a href="https://creativecommons.org/publicdomain/zero/1.0/">Creative Commons 0</a> so you can do whatever you want with it.</p>
 </section>
 <section class="">
+<p class="background"><img alt="" src="images/coversuper.svg" /></p>
 <h2 id="ranger">Ranger</h2>
-<p><img alt="" class="background" src="images/cover.svg" /></p>
 <p>You are gristled loner raised by bears, a storied hunter and tracker, a camoflouged predator shooting from the bush. Rangers are warriors of the forest. What they lack in hit points, they make up for in luck and skill.</p>
 <p><strong>Hit points:</strong> A ranger gains 1d8 hit points at each level.</p>
 <p><strong>Weapon training:</strong> A ranger is trained in the use of these weapons: club, dagger, long sword, spear, staff, and all ranged weapons. Rangers may wear any armor.</p>
@@ -194,17 +194,19 @@ You will need to install two command line programs. Python-markdown (<a href="ht
 </tbody>
 </table>
 <p>Ranged attacks only.</p>
-<p><img alt="" class="background" src="images/coversuper.svg" /></p>
+<p class="background"><img alt="" src="images/coversuper.svg" /></p>
 </section>
 <section class="">
 <h2 id="halfling-pipeweed">Halfling Pipeweed</h2>
-<p>No self respecting halfling is without their pipe and some good pipweed.
+<p>No self respecting halfling is without their pipe and some good pipeweed.
+While smoking standard has no mechanical effect, certain herbal additives maybe added to a hot pipe to enhance the halflings abilities.
 A halfling may forage for pipeweed by rolling on the following table.
 Typically just before their next adventure.</p>
-<p>Standard pipeweed may be bought in shops in areas where halflings reside for 10sp each. It should also be noted that it would be terribly rude for a halfling to refuse another halfling a pinch of pipeweed and normal for the favor to be asked. </p>
+<p>Standard pipeweed may be bought in shops in areas where halflings reside for 10sp each.
+It should also be noted that it would be terribly rude for a halfling to refuse another halfling a puff of pipeweed and nearly rude for the favor to not be asked. </p>
 <p>A halfling must use a portion of standard pipeweed to keep their pipe lit all day.
 With their pipe lit the halfling may use an action to add a little herbal supplement to the pipe. Effects do not stack.</p>
-<p><img alt="" src="images/outro.svg" /></p>
+<p class="forground"><img alt="" src="images/outro.svg" /></p>
 <h3 class="breakbefore" id="pipeweed-foraging-table">Pipeweed Foraging Table</h3>
 <p>A half day spent foraging allows may uncover some valuable pipeweed. Roll 3d16 +/-Luckmod.</p>
 <div class="tablewrap">
@@ -229,14 +231,14 @@ With their pipe lit the halfling may use an action to add a little herbal supple
 <tr>
 <td>27-29</td>
 <td>Pipeweed</td>
-<td>2d6</td>
-<td>+1 Will</td>
+<td>1d6</td>
+<td>Allows other weeds</td>
 <td>All day</td>
 </tr>
 <tr>
 <td>30</td>
 <td>Gassy Webcap</td>
-<td>2d6</td>
+<td>1d6</td>
 <td>Heal self 1hp (1/turn)</td>
 <td>-</td>
 </tr>
@@ -348,6 +350,7 @@ With their pipe lit the halfling may use an action to add a little herbal supple
 </tbody>
 </table>
 </div>
+<p class="forground"><img alt="" src="images/outro.svg" /></p>
 </section>
 <section>
 <h2 id="manifest-of-the-mundane">Manifest of the Mundane</h2>
@@ -422,8 +425,8 @@ The Slurm gains -1 attack and -5’ movement per person swallowed. </p>
 </div>
 </div>
 </section>
-<section class="">
-<p><img alt="" class="background" src="images/coversuper.svg" /></p>
+<section class="background">
+<p class="background"><img alt="" src="images/coversuper.svg" /></p>
 </section>
 <p></body>
 </html></p>
