--- a/output.html
+++ b/output.html
@@ -14,7 +14,7 @@
 <li><a href="#halfling-pipeweed">Halfling Pipeweed</a></li>
 <li><a href="#manifest-of-the-mundane">Manifest of the Mundane</a></li>
 <li><a href="#slurm-priest">Slurm Priest</a></li>
-<li><a href="#slime-goblins">Slime Goblins</a></li>
+<li><a href="#slime-grubins">Slime Grubins</a></li>
 <li><a href="#mechanaut">Mechanaut</a></li>
 </ul>
 </li>
@@ -371,39 +371,36 @@ With their pipe lit the halfling may use an action to add a little herbal supple
 </section>
 <section>
 <h2 id="slurm-priest">Slurm Priest</h2>
-<p><strong>Slurm Priest:</strong> Init +2; Atk bite +2 melee (1d6 + swallow), Vomit Puss Goblin +3 ranged 40’ (1d3, 5’ area effect); AC 12; HD 2d8; hp 10; MV 20&rsquo;; Act 1d20 + 1d14; SP disgust, swallow, vomit, defecate; SV Fort +5, Ref +0, Will +0; AL C.</p>
-<p class="breakafter">This upright, purple worm loves jewelry, profanity, and is always found with the Slime Goblins it has excreted. 
+<p><strong>Slurm Priest:</strong> Init +2; Atk bite +2 melee (1d6 + swallow), Vomit Puss Grubin +3 ranged 40’ (1d3, 5’ area effect); AC 12; HD 2d8; hp 10; MV 20&rsquo;; Act 1d20 + 1d14; SP disgust, swallow, vomit, defecate; SV Fort +5, Ref +0, Will +0; AL C.</p>
+<p class="breakafter">This upright, purple worm loves jewelry, profanity, and is always found with the <em>Slime Grubins</em> it has excreted. 
 A supplicant of its chaos lord, the Slurm Priest is often called to test the forces of Law. </p>
-<p><strong>Disgust:</strong> Any human in a 5’ range must make a fort save each turn or lose a turn. Demihumans are immune. </p>
-<p><strong>Swallow:</strong> If bite successful; DC 15 Strength check or be half swallowed. The character will be upside down with arms pinned at waist and legs kicking. On the Slurm’s next turn the character drops any large weapon and is completely swallowed (unless aided in some way). Swallowed characters lose 1d3 Stamina per round and take half damage from piercing and bludgeoning attacks on the Slurm.  Swallowed characters who have access to a blade must make DC 15 Strength check to attack. </p>
+<p><strong>Disgust:</strong> Any human in a 5’ range must make a fort save each round or lose a round. Demihumans are immune. </p>
+<p><strong>Swallow:</strong> If bite successful; DC 15 Strength check or be half swallowed. The character will be upside down with arms pinned at waist and legs kicking. On the Slurm’s next round the character drops any large weapon and is completely swallowed (unless aided in some way). Swallowed characters lose 1d3 Stamina per round and take half damage from piercing and bludgeoning attacks on the Slurm.  Swallowed characters who have access to a blade must make DC 15 Strength check to attack. </p>
 <p>Characters who lose Stamina in the Slurm’s stomach have a chance of mutation (10% per point of Stamina, minor corruption table modified by luck).
 The Slurm gains -1 attack and -5’ movement per person swallowed. </p>
 <p>Anyone reduced to 6 or less Stamina becomes a Slurm Symbiote and is ejected from the rear (100% chance of mutation). The worms grow in the body. Over the next week, barring intervention, the victim falls very ill, begins to bloat, attempts to attack lawful clerics, and explodes releasing thousands of purple worms. </p>
-<h3 id="vomit">Vomit</h3>
-<p>Can shoot a Puss Goblin. Shooting it up to 40’. +3 ranged, 1d4 Dam. The Puss Goblin explodes on a hit or lands ready to attack next turn on a miss. </p>
-<h3 id="defecate">Defecate</h3>
-<p>Can release 3 Puss Goblins. If the Slurm has ingested Stamina, the Slurm can release Acid or Napalm Goblins. </p>
-<h3 id="exiting">Exiting</h3>
-<p>Upon losing a moral check or being reduced to too few HP; the Slurm will forcibly eject any characters in its stomach and bite its own tail and swallow itself until it has disappeared with a small pop. Upon death; the worm deflates with gas and fluid leaking out, leaving only a bit of skin, lips, teeth, and jewelry (1d14+14gp). 
+<p><strong>Vomit</strong> Can shoot a Puss Grubin. Shooting it up to 40’. +3 ranged, 1d4 Dam. The Puss Grubin explodes on a hit or lands ready to attack next round on a miss. </p>
+<p><strong>Defecate</strong> Can release 3 Puss Grubins. If the Slurm has ingested Stamina, the Slurm can release Acid or Napalm Grubins. </p>
+<p><strong>Exiting</strong> Upon losing a moral check or being reduced to too few HP; the Slurm will forcibly eject any characters in its stomach and bite its own tail and swallow itself until it has disappeared with a small pop. Upon death; the worm deflates with gas and fluid leaking out, leaving only a bit of skin, lips, teeth, and jewelry (1d14+14gp). 
 </div></p>
 </section>
 <section>
-<h2 id="slime-goblins">Slime Goblins</h2>
-<p>These are goblins that have been mutated in the extradimensional stomach of the Slurm (see above). </p>
-<p><strong>Puss Goblin:</strong> Init -1; Atk shiv -1 melee (1d4-1), burst area effect 5’ (1d3 and DC 10 Fort save or lose a turn), AC 9; HD 1d6-1; hp 2; MV roll 35&rsquo;; Act 1d20; SP burst, infravision; SV Fort +1, Ref -1, Will +3; AL C</p>
-<p>Massively bloated into transluscent, yellow balls. These frightened looking goblins roll into battle in numbers. They explodes with yellow spray upon taking any damage and . 1d3 to all within 5’. Usually sets off a chain reaction. Attacks in numbers. </p>
-<h3 id="napalm">Napalm</h3>
-<p>Att Shortsword +1 melee, Spit napalm +1 ranged 1d4HP and catch fire. If killed by piercing or slashing attack; reflex save to avoid napalm spray. </p>
-<h3 id="acid">Acid</h3>
-<p>Acid spray ranged 20’ to center of 10’x10’ square, reflex save or 1d4HP and then 1HP for 1d4/round and lose a turn or until fort save from coughing gas.  If killed by piercing or slashing attack; reflex save to avoid acid spray. 
+<h2 id="slime-grubins">Slime Grubins</h2>
+<p>These are grubins that have mutated in the extradimensional stomach of the Slurm (see above). </p>
+<p><strong>Puss Grubin:</strong> Init -1; Atk shiv -1 melee (1d4-1), burst area effect 5’ (1d3 and DC 10 Fort save or lose a round), AC 9; HD 1d6-1; hp 2; MV roll 35&rsquo;; Act 1d20; SP burst, infravision; SV Fort +1, Ref -1, Will +3; AL C</p>
+<p>Massively bloated into transluscent, yellow balls. These frightened looking grubins roll into battle in numbers. They use their full movement to roll right up to the enemeys and explode with yellow spray upon taking any damage. 1d3 to all within 5’. Usually sets off a chain reaction. </p>
+<p><strong>Napalm Grubin</strong> Att Shortsword +1 melee, Spit napalm +1 ranged 1d4HP and catch fire. If killed by piercing or slashing attack; reflex save to avoid napalm spray. </p>
+<p><strong>Acid Grubin</strong> Acid spray ranged 20’ to center of 10’x10’ square, reflex save or 1d4HP and then 1HP for 1d4/round and lose a round or until fort save from coughing gas.  If killed by piercing or slashing attack; reflex save to avoid acid spray. 
 </div></p>
 </section>
 <section>
 <h2 id="mechanaut">Mechanaut</h2>
-<div class="colstwo">
-<p>Large, plate armor night. Creature in head controls the armor. If killed, the head disconnects and flies away. </p>
-<p>Shock Armor: contact causes shock damage (1d3). 3 damage causes Fort save or drop weapon. </p>
-<p>Water damages it. </p>
+<div class="">
+<p>A large, plate armor knight. A small creature in the head controls this mechanical armor. Usually attacks with a <em>bash</em> followed by a sword strike to the prone enemy. If the armor is killed, the head disconnects and flies away. </p>
+<p><strong>Mechanaut:</strong> Init +2; Atk Great Sword +4 melee (1d12+4), Bash +6 melee (1d6 + bash); AC 17; HD 4d12; HP 26; MV 35&rsquo;; Act 2d20; SP Shock Armor, bash, infravision, immune to critical hits; SV Fort +10, Ref +1, Will +6; AL N</p>
+<p>Shock Armor: contact with skin or steel causes shock damage (1d6). Drop your weapon on receiving 5 damage and damage 6 causes DC 20 Fort save or fall prone. </p>
+<p><em>Bash</em>: DC 15 or prone.</p>
+<p>Water causes it 1d12 damage/round. </p>
 </div>
 </div>
 </section>
