--- a/croak.html
+++ b/croak.html
@@ -18,10 +18,9 @@
 
 <h1 id="croak">Croak!</h1>
 <section class="clean">
-<p class="background"><img alt="" src="images/cover.svg" /></p>
+<!-- ![](images/cover.svg) -->
+<!-- {: .background} -->
 <p class="background"><img alt="" src="images/coversuper.svg" /></p>
-</section>
-<section class="clean blank">
 </section>
 <section id="contents">
 <div class="toc">
@@ -30,17 +29,20 @@
 <li><a href="#autozinefier">AutoZinefier</a></li>
 <li><a href="#ranger">Ranger</a></li>
 <li><a href="#halfling-pipeweed">Halfling Pipeweed</a></li>
+<li><a href="#shields-of-note">Shields of Note</a></li>
 <li><a href="#manifest-of-the-mundane">Manifest of the Mundane</a></li>
 <li><a href="#slurm-priest">Slurm Priest</a></li>
 <li><a href="#slime-grubins">Slime Grubins</a></li>
 <li><a href="#mechanaut">Mechanaut</a></li>
+<li><a href="#another-muddy-village">Another Muddy Village</a></li>
 </ul>
 </li>
 </ul>
 </div>
 </section>
 <section class="">
-<p class="background"><img alt="" src="images/coversuper.svg" /></p>
+<!-- ![](images/coversuper.svg) -->
+<!-- {: .background} -->
 <h2 id="autozinefier">AutoZinefier</h2>
 <p>This zine was typed in a <em>plain text editor</em> using <a href="https://daringfireball.net/projects/markdown/basics">markdown</a> and html. 
 You can see some of the text I typed below.  This is what I typed to create the beginning of the following chapter.</p>
@@ -64,7 +66,8 @@ You will need to install two command line programs. Python-markdown (<a href="ht
 <p>You can then run the included script called <em>markdowntopdf.sh</em>. On my computer, I type <kbd>sh ./markdowntopdf.sh croak</kbd> in the terminal. If that works, you can copy <em>croak.md</em> to a new file like <em>myfilename.md</em> with no spaces. Change the text and images and then use the command <kbd>sh ./markdowntopdf.sh myfilename</kbd> to make your own zine. All of my work here is released as <a href="https://creativecommons.org/publicdomain/zero/1.0/">Creative Commons 0</a> so you can do whatever you want with it.</p>
 </section>
 <section class="">
-<p class="background"><img alt="" src="images/coversuper.svg" /></p>
+<!-- ![](images/coversuper.svg) -->
+<!-- {: .background} -->
 <h2 id="ranger">Ranger</h2>
 <p>You are gristled loner raised by bears, a storied hunter and tracker, a camoflouged predator shooting from the bush. Rangers are warriors of the forest. What they lack in hit points, they make up for in luck and skill.</p>
 <p><strong>Hit points:</strong> A ranger gains 1d8 hit points at each level.</p>
@@ -194,7 +197,8 @@ You will need to install two command line programs. Python-markdown (<a href="ht
 </tbody>
 </table>
 <p>Ranged attacks only.</p>
-<p class="background"><img alt="" src="images/coversuper.svg" /></p>
+<!-- ![](images/coversuper.svg) -->
+<!-- {: .background} -->
 </section>
 <section class="">
 <h2 id="halfling-pipeweed">Halfling Pipeweed</h2>
@@ -350,7 +354,16 @@ With their pipe lit the halfling may use an action to add a little herbal supple
 </tbody>
 </table>
 </div>
-<p class="forground"><img alt="" src="images/outro.svg" /></p>
+<!-- ![](images/outro.svg) -->
+<!-- {: .forground} -->
+</section>
+<section class="">
+<h2 id="shields-of-note">Shields of Note</h2>
+<h3 id="magic-shield-1">Magic Shield 1</h3>
+<p>+1d atk, damage, and deed to bash.</p>
+<h3 id="magic-shield-2">Magic Shield 2</h3>
+<p>Holding the shield you cannot be knocked prone in battle as long as you remain consceus.</p>
+<p class="breakbefore">a</p>
 </section>
 <section>
 <h2 id="manifest-of-the-mundane">Manifest of the Mundane</h2>
@@ -370,7 +383,6 @@ With their pipe lit the halfling may use an action to add a little herbal supple
 <li>Contains a coarse brown fur</li>
 <li>Has a name</li>
 <li>Taste like a fine vintage port (still appears as a clear liquid without smell)</li>
-<li>Cannot be captured in a bowl or canteen </li>
 </ol>
 <h3 id="a-book">A Book</h3>
 <ol>
@@ -385,19 +397,39 @@ With their pipe lit the halfling may use an action to add a little herbal supple
 <li>Has a heartbeat.  If opened, the book will die.</li>
 <li>Contains the most beautiful illustrations you’ve ever seen. You do not want to part with this tome.</li>
 <li>Is written in ink that is only visible in complete darkness</li>
+<li></li>
+<li></li>
+<li></li>
+</ol>
+<h3 id="a-door">A Door</h3>
+<ol>
+<li></li>
+<li></li>
+<li></li>
+<li></li>
+<li></li>
+<li></li>
+<li></li>
+<li></li>
+<li></li>
+<li></li>
+<li></li>
+<li></li>
+<li></li>
+<li></li>
 </ol>
 </section>
 <section>
 <h2 id="slurm-priest">Slurm Priest</h2>
 <p><strong>Slurm Priest:</strong> Init +2; Atk bite +2 melee (1d6 + swallow), Vomit Puss Grubin +3 ranged 40’ (1d3, 5’ area effect); AC 12; HD 2d8; hp 10; MV 20&rsquo;; Act 1d20 + 1d14; SP disgust, swallow, vomit, defecate; SV Fort +5, Ref +0, Will +0; AL C.</p>
-<p class="breakafter">This upright, purple worm loves jewelry, profanity, and is always found with the <em>Slime Grubins</em> it has excreted. 
+<p>This upright, purple worm loves jewelry, profanity, and is always found with the <em>Slime Grubins</em> it has excreted. 
 A supplicant of its chaos lord, the Slurm Priest is often called to test the forces of Law. </p>
 <p><strong>Disgust:</strong> Any human in a 5’ range must make a fort save each round or lose a round. Demihumans are immune. </p>
-<p><strong>Swallow:</strong> If bite successful; DC 15 Strength check or be half swallowed. The character will be upside down with arms pinned at waist and legs kicking. On the Slurm’s next round the character drops any large weapon and is completely swallowed (unless aided in some way). Swallowed characters lose 1d3 Stamina per round and take half damage from piercing and bludgeoning attacks on the Slurm.  Swallowed characters who have access to a blade must make DC 15 Strength check to attack. </p>
+<p><strong>Swallow:</strong> If bite successful; DC 15 Strength check or be half swallowed. The character will be upside down with arms pinned at waist and legs kicking. On the Slurm’s next turn the character drops any large weapon and is completely swallowed (unless aided in some way). Swallowed characters lose 1d3 Stamina per round and take half damage from piercing and bludgeoning attacks on the Slurm.  Swallowed characters who have access to a blade must make DC 15 Strength check to attack. </p>
 <p>Characters who lose Stamina in the Slurm’s stomach have a chance of mutation (10% per point of Stamina, minor corruption table modified by luck).
 The Slurm gains -1 attack and -5’ movement per person swallowed. </p>
 <p>Anyone reduced to 6 or less Stamina becomes a Slurm Symbiote and is ejected from the rear (100% chance of mutation). The worms grow in the body. Over the next week, barring intervention, the victim falls very ill, begins to bloat, attempts to attack lawful clerics, and explodes releasing thousands of purple worms. </p>
-<p><strong>Vomit</strong> Can shoot a Puss Grubin. Shooting it up to 40’. +3 ranged, 1d4 Dam. The Puss Grubin explodes on a hit or lands ready to attack next round on a miss. </p>
+<p><strong>Vomit</strong> Can shoot a Puss Grubin. Shooting it up to 40’. +3 ranged, 1d4 Dam. The Puss Grubin explodes on a hit or lands ready to attack next turn on a miss. </p>
 <p><strong>Defecate</strong> Can release 3 Puss Grubins. If the Slurm has ingested Stamina, the Slurm can release Acid or Napalm Grubins. </p>
 <p><strong>Exiting</strong> Upon losing a moral check or being reduced to too few HP; the Slurm will forcibly eject any characters in its stomach and bite its own tail and swallow itself until it has disappeared with a small pop. Upon death; the worm deflates with gas and fluid leaking out, leaving only a bit of skin, lips, teeth, and jewelry (1d14+14gp). 
 </div></p>
@@ -410,6 +442,7 @@ The Slurm gains -1 attack and -5’ movement per person swallowed. </p>
 <p><strong>Napalm Grubin</strong> Att Shortsword +1 melee, Spit napalm +1 ranged 1d4HP and catch fire. If killed by piercing or slashing attack; reflex save to avoid napalm spray. </p>
 <p><strong>Acid Grubin</strong> Acid spray ranged 20’ to center of 10’x10’ square, reflex save or 1d4HP and then 1HP for 1d4/round and lose a round or until fort save from coughing gas.  If killed by piercing or slashing attack; reflex save to avoid acid spray. 
 </div></p>
+<p class="breakbefore">a</p>
 </section>
 <section>
 <h2 id="mechanaut">Mechanaut</h2>
@@ -419,8 +452,74 @@ The Slurm gains -1 attack and -5’ movement per person swallowed. </p>
 <p>Shock Armor: contact with skin or steel causes shock damage (1d6). Drop your weapon on receiving 5 damage and damage 6 causes DC 20 Fort save or fall prone. </p>
 <p><em>Bash</em>: DC 15 or prone.</p>
 <p>Water causes it 1d12 damage/round. </p>
+<p class="breakbefore">a</p>
 </div>
 </div>
+</section>
+<section>
+<h2 id="another-muddy-village">Another Muddy Village</h2>
+<table>
+<thead>
+<tr>
+<th>R</th>
+<th>Name</th>
+<th>Leader</th>
+<th>Of Note</th>
+<th>Strife</th>
+</tr>
+</thead>
+<tbody>
+<tr>
+<td>1</td>
+<td>Wortlethorpe</td>
+<td>Goomie</td>
+<td>Poorly led</td>
+<td>No beer</td>
+</tr>
+<tr>
+<td>2</td>
+<td>Bursheer</td>
+<td>Dar Dafa</td>
+<td>Powerful matriarchs</td>
+<td>Haunted</td>
+</tr>
+<tr>
+<td>3</td>
+<td>Inkvar</td>
+<td>Village Elders</td>
+<td></td>
+<td>Harrased by grubins</td>
+</tr>
+<tr>
+<td>4</td>
+<td>Obelast</td>
+<td>Footumch</td>
+<td>Great shops</td>
+<td>Warring Families</td>
+</tr>
+<tr>
+<td>5</td>
+<td>Tigre</td>
+<td>Zankule</td>
+<td>A town secret</td>
+<td>A Cult</td>
+</tr>
+<tr>
+<td>6</td>
+<td>Boorsville</td>
+<td>Samuel Goodins</td>
+<td>Everyone lies</td>
+<td></td>
+</tr>
+<tr>
+<td>7</td>
+<td>Shiple</td>
+<td>Delphine</td>
+<td></td>
+<td>A town bully</td>
+</tr>
+</tbody>
+</table>
 </section>
 <section class="background">
 <p class="background"><img alt="" src="images/coversuper.svg" /></p>
