--- a/output.html
+++ b/output.html
@@ -1,13 +1,12 @@
-<h1 id="croak">Croak!</h1>
 <section class="clean">
 <!-- ![](images/cover.svg) -->
 <!-- {: .background} -->
 <p class="background"><img alt="" src="images/coversuper.svg" /></p>
 </section>
 <section id="contents">
+<h3 id="contents_1">Contents</h3>
 <div class="toc">
 <ul>
-<li><a href="#croak">Croak!</a><ul>
 <li><a href="#autozinefier">AutoZinefier</a></li>
 <li><a href="#ranger">Ranger</a></li>
 <li><a href="#halfling-pipeweed">Halfling Pipeweed</a></li>
@@ -18,9 +17,19 @@
 <li><a href="#mechanaut">Mechanaut</a></li>
 <li><a href="#another-muddy-village">Another Muddy Village</a></li>
 </ul>
-</li>
-</ul>
 </div>
+<h3 id="contributors">Contributors</h3>
+<p>Every contributor has waived copyright to their work. Anyone can use it for any purpose without attribution.</p>
+<ul>
+<li>Ariel Churi</li>
+<li>Chris Messemore</li>
+<li>Dave</li>
+</ul>
+<p><a rel="license"
+     href="http://creativecommons.org/publicdomain/zero/1.0/">
+    <img src="http://i.creativecommons.org/p/zero/1.0/88x31.png" style="border-style: none;" alt="CC0" />
+  </a> <br />
+ To the extent possible under law, the person who associated CC0 with this work has waived all copyright and related or neighboring rights to this work</p>
 </section>
 <section class="">
 <!-- ![](images/coversuper.svg) -->
@@ -201,7 +210,7 @@ With their pipe lit the halfling may use an action to add a little herbal supple
 <tr>
 <th>Roll</th>
 <th>Name</th>
-<th>Amount</th>
+<th>#</th>
 <th>Effect</th>
 <th>Duration</th>
 </tr>
@@ -418,11 +427,14 @@ The Slurm gains -1 attack and -5’ movement per person swallowed. </p>
 </section>
 <section>
 <h2 id="slime-grubins">Slime Grubins</h2>
-<p>These are grubins that have mutated in the extradimensional stomach of the Slurm (see above). </p>
-<p><strong>Puss Grubin:</strong> Init -1; Atk shiv -1 melee (1d4-1), burst area effect 5’ (1d3 and DC 10 Fort save or lose a round), AC 9; HD 1d6-1; hp 2; MV roll 35&rsquo;; Act 1d20; SP burst, infravision; SV Fort +1, Ref -1, Will +3; AL C</p>
-<p>Massively bloated into transluscent, yellow balls. These frightened looking grubins roll into battle in numbers. They use their full movement to roll right up to the enemeys and explode with yellow spray upon taking any damage. 1d3 to all within 5’. Usually sets off a chain reaction. </p>
-<p><strong>Napalm Grubin</strong> Att Shortsword +1 melee, Spit napalm +1 ranged 1d4HP and catch fire. If killed by piercing or slashing attack; reflex save to avoid napalm spray. </p>
-<p><strong>Acid Grubin</strong> Acid spray ranged 20’ to center of 10’x10’ square, reflex save or 1d4HP and then 1HP for 1d4/round and lose a round or until fort save from coughing gas.  If killed by piercing or slashing attack; reflex save to avoid acid spray. 
+<p>These are standard grubins that have been pickled in the extradimensional stomach of the Slurm (see above). </p>
+<p><strong>Grubin:</strong> Init -1; Atk shiv -1 melee (1d4-1), burst area effect 5’ (1d3 and DC 10 Fort save or lose a round), AC 9; HD 1d6-1; hp 2; MV roll 35&rsquo;; Act 1d20; SP burst, infravision; SV Fort +1, Ref -1, Will +3; AL C</p>
+<p>Massively bloated into transluscent balls.
+These frightened looking grubins roll into battle in numbers.
+They use their full movement to roll right up to the enemy and burst upon taking any damage.</p>
+<p><strong>Puss:</strong> 1d3 to all within 10’.</p>
+<p><strong>Napalm:</strong> 5&rsquo; covered in flaming gel and grubin bits. 1d5 damage/round. two DC 15 agility checks to remove. Anyone may attempt over multiple rounds.</p>
+<p><strong>Acid:</strong> Acid cloud 15’. 1d4 damage/round, DC 15 Ref save or lose a round, Act -1d.
 </div></p>
 <p class="breakbefore">a</p>
 </section>
@@ -446,8 +458,6 @@ The Slurm gains -1 attack and -5’ movement per person swallowed. </p>
 <th>R</th>
 <th>Name</th>
 <th>Leader</th>
-<th>Of Note</th>
-<th>Strife</th>
 </tr>
 </thead>
 <tbody>
@@ -455,48 +465,81 @@ The Slurm gains -1 attack and -5’ movement per person swallowed. </p>
 <td>1</td>
 <td>Wortlethorpe</td>
 <td>Goomie</td>
-<td>Poorly led</td>
-<td>No beer</td>
 </tr>
 <tr>
 <td>2</td>
 <td>Bursheer</td>
 <td>Dar Dafa</td>
-<td>Powerful matriarchs</td>
-<td>Haunted</td>
 </tr>
 <tr>
 <td>3</td>
 <td>Inkvar</td>
 <td>Village Elders</td>
-<td></td>
-<td>Harrased by grubins</td>
 </tr>
 <tr>
 <td>4</td>
 <td>Obelast</td>
 <td>Footumch</td>
-<td>Great shops</td>
-<td>Warring Families</td>
 </tr>
 <tr>
 <td>5</td>
 <td>Tigre</td>
 <td>Zankule</td>
-<td>A town secret</td>
-<td>A Cult</td>
 </tr>
 <tr>
 <td>6</td>
 <td>Boorsville</td>
 <td>Samuel Goodins</td>
-<td>Everyone lies</td>
-<td></td>
 </tr>
 <tr>
 <td>7</td>
 <td>Shiple</td>
 <td>Delphine</td>
+</tr>
+</tbody>
+</table>
+<hr />
+<table>
+<thead>
+<tr>
+<th>R</th>
+<th>Of Note</th>
+<th>Strife</th>
+</tr>
+</thead>
+<tbody>
+<tr>
+<td>1</td>
+<td>Poorly led</td>
+<td>No beer</td>
+</tr>
+<tr>
+<td>2</td>
+<td>Powerful matriarchs</td>
+<td>Haunted</td>
+</tr>
+<tr>
+<td>3</td>
+<td></td>
+<td>Harrased by grubins</td>
+</tr>
+<tr>
+<td>4</td>
+<td>Great shops</td>
+<td>Warring Families</td>
+</tr>
+<tr>
+<td>5</td>
+<td>A town secret</td>
+<td>A Cult</td>
+</tr>
+<tr>
+<td>6</td>
+<td>Everyone lies</td>
+<td></td>
+</tr>
+<tr>
+<td>7</td>
 <td></td>
 <td>A town bully</td>
 </tr>
@@ -506,5 +549,3 @@ The Slurm gains -1 attack and -5’ movement per person swallowed. </p>
 <section class="background">
 <p class="background"><img alt="" src="images/coversuper.svg" /></p>
 </section>
-<p></body>
-</html></p>
